--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2020 Glory Luxe. All rights reserved | Designed by <a
+							<p>© 2020 Glory LuxeBeauty Eminence. All rights reserved | Designed by <a
 									href="https://w3layouts.com">W3layouts</a></p>
 						</div>
 						<ul class="columns text-lg-right">
