--- a/contact.html
+++ b/contact.html
@@ -377,7 +377,7 @@
 				<div class="container">
 					<div class="copyright-footer">
 						<div class="columns text-lg-left">
-							<p>© 2023 All rights reserved.developed for FRT Project </a></p>
+							<p>© 2023 All rights reserved by RAMLAL SURESH .developed for FRT Project </a></p>
 						</div>
 						<ul class="columns text-lg-right">
 							<li><a href="#">Privacy Policy</a>
