--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
 	<!-- Required meta tags -->
@@ -24,7 +24,7 @@
 		<div class="container-fluid">
 			<nav class="navbar navbar-expand-lg navbar-dark stroke">
 				<h1> <a class="navbar-brand" href="index.html">
-						<span class="sub-logo">G</span>lory <span class="sub-logo">L</span>uxe
+						<span class="sub-logo">G</span>Beauty Eminence<span class="sub-logo">L</span>uxe
 					</a></h1>
 				<!-- if logo is image enable this   
         <a class="navbar-brand" href="#index.html">
